Single-apim-node-k8-deployment-resources/apim-k8-resources/wso2am-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2am-single-node-am-deployment
  namespace: apim
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      deployment: wso2am-single-node-am
      node: wso2am-single-node-am
  template:
    metadata:
      labels:
        deployment: wso2am-single-node-am
        node: wso2am-single-node-am
    spec:
      containers:
        - name: wso2am
          image: wso2/wso2am:4.0.0
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 9443
            initialDelaySeconds: 180
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 9443
            initialDelaySeconds: 180
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command:  ['sh', '-c', '${WSO2_SERVER_HOME}/bin/api-manager.sh stop']
          resources:
            requests:
              memory: 2Gi
              cpu: 2000m
            limits:
              memory: 3Gi
              cpu: 3000m
          securityContext:
            runAsUser: 802
          ports:
            - containerPort: 8280
              protocol: "TCP"
            - containerPort: 8243
              protocol: "TCP"
            - containerPort: 9763
              protocol: "TCP"
            - containerPort: 9443
              protocol: "TCP"
            - containerPort: 9711
              protocol: "TCP"
            - containerPort: 9611
              protocol: "TCP"
            - containerPort: 5672
              protocol: "TCP"
          volumeMounts:
            - name: wso2am-conf
              mountPath: /home/wso2carbon/wso2-config-volume/repository/conf
        - name: sidecar-container
          image: busybox:1.32
          command: ['sh', '-c', 'echo -e "Checking the connectivity between pods through k8 service names"; while true; do sleep 1; printf "%s %s\n" "$(date)"; nc -zv -w 2 "wso2am-single-node-am-service" 9443; done; echo -e "  >> END";']
      volumes:
        - name: wso2am-conf
          configMap:
            name: wso2am-single-node-am-conf
