Single-apim-node-k8-deployment-resources/apim-k8-resources/wso2am-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2am-single-node-am-gateway-ingress
  namespace : apim
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - "gateway.am.wso2.com"
  rules:
  - host: "gateway.am.wso2.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wso2am-single-node-am-service
            port: 
              number: 8243
