Single-apim-node-k8-deployment-resources/apim-k8-resources/wso2am-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2am-single-node-am-ingress
  namespace : apim
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
      - "am.wso2.com"
  rules:
  - host: "am.wso2.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wso2am-single-node-am-service
            port: 
              number: 9443
